--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -29,8 +29,8 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: ${{ runner.os }}-node-
+          key: npm-${{ hashFiles('package-lock.json') }}
+          restore-keys: npm-
           
       - name: Install Dependencies
         run: npm ci
@@ -39,6 +39,6 @@ jobs:
         uses: actions/cache@v4
         with:
           path: node_modules
-          key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: ${{ runner.os }}-modules-
+          key: node-modules-${{ hashFiles('package-lock.json') }}
+          restore-keys: node-modules-
           
