--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -45,6 +45,7 @@ jobs:
   security:
     name: NPM Dependency Audit
     runs-on: ubuntu-latest
+    needs: setup
     steps:
       - name: Checkout Code 
         uses: actions/checkout@v4
@@ -58,3 +59,19 @@ jobs:
       - name: Run NPM Dependency Audit
         run: npm audit --audit-level=critical
           
+  test:
+    name: Unit Testing
+    runs-on: ubuntu-latest
+    needs: [setup, security]
+    steps:
+      - name: Checkout Code 
+        uses: actions/checkout@v4
+
+      - name: Restore cached dependencies
+        uses: actions/cache@v4
+        with:
+          path: node_modules
+          key: node-modules-${{ hashFiles('package-lock.json') }}
+
+      - name: Run Unit Tests
+        run: npm test
