--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -75,3 +75,21 @@ jobs:
 
       - name: Run Unit Tests
         run: npm test
+
+  lint:
+    name: Static Code Analysis
+    runs-on: ubuntu-latest
+    needs: [setup, security]
+    steps:
+      - name: Checkout Code 
+        uses: actions/checkout@v4
+
+      - name: Restore cached dependencies
+        uses: actions/cache@v4
+        with:
+          path: node_modules
+          key: node-modules-${{ hashFiles('package-lock.json') }}
+
+      - name: Run ESLint
+        run: npm run lint
+    
