--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -92,4 +92,26 @@ jobs:
 
       - name: Run ESLint
         run: npm run lint
-    
+
+  build:
+    name: Build
+    runs-on: ubuntu-latest
+    needs: [setup, security, test, lint]
+    steps:
+      - name: Checkout Code 
+        uses: actions/checkout@v4
+
+      - name: Restore cached dependencies
+        uses: actions/cache@v4
+        with:
+          path: node_modules
+          key: node-modules-${{ hashFiles('package-lock.json') }}
+      
+      - name: Build Project
+        run: npm run build 
+      
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-artifacts
+          path: dist/
