--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -194,5 +194,45 @@ jobs:
       - name: Set Image Tag output 
         id: set_output 
         run: echo "image_tag=$(echo ${{ github.sha }} | cut -c1-7)" >> $GITHUB_OUTPUT
+
+  update-k8s:
+    name: Update Kubernetes Deployment 
+    runs-on: ubuntu-latest 
+    needs: docker 
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    steps:
+      - name: Checkout Code 
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.TOKEN }}
+
+      - name: Set up Git Config
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "github@actions.com" 
+
+      - name: Update k8s Deployment 
+        env:
+          IMAGE_TAG: sha-${{ github.sha }}
+          GITHUB_REPOSITORY: ${{ github.repository }}
+          REGISTRY: ghcr.io
+        run: |
+          # Define the new image with tag
+          NEW_IMAGE="${REGISTRY}/${GITHUB_REPOSITORY}:${IMAGE_TAG}"
+
+          # Update the image in the deployment file
+          sed -i "s|image: ${REGISTRY}/.*|image: ${NEW_IMAGE}|g" kubernetes/deployment.yaml
+
+          # Verify the change
+          echo "Updated deployment to use image: ${NEW_IMAGE}"
+          grep -A 1 "image:" kubernetes/deployment.yaml
+
+      - name: Commit and Push changes
+        run: |
+          git add kubernetes/deployment.yaml
+          git commit -m "Update deployment to use image: ${NEW_IMAGE}"
+          git push
+
+      
         
 
